[package]
name = "mdtransform"
version = "0.1.0"
edition = "2021"
description = "a simple program that renders Markdown as HTML for websites"
license = "MIT"
homepage = "https://soupy.me/mdtransform"
repository = "https://github.com/AnnikaCodes/mdtransform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
regex = "1.7.0"
structopt = "0.3.26"
